2006-04-07  Rodney Dawes  <dobey@novell.com>

	* 48x48/status/gnome-fs-loading.png: Remove icon which is replaced
	by the image-loading icon in the status context

2006-04-07  Rodney Dawes  <dobey@novell.com>

	* 16x16/stock/generic/Makefile.am:
	* 16x16/stock/stock_new-dir.png: Removed icon which is replaced by
	the folder-new icon in actions

	* */stock/io/Makefile.am:
	* */stock/io/*.png:
	* */stock/navigation/Makefile.am:
	* */stock/navigation/*.png:
	* */stock/net/Makefile.am:
	* */stock/net/*.png:
	* */stock/object/Makefile.am:
	* */stock/object/*.png:
	Remove a bunch more icons that have been replaced and/or renamed to
	comply with the Icon Naming Spec in other contexts

2006-04-07  Jakub Steiner <jimmac@ximian.com>

	* 16x16/status/media-playlist-*: repeat, shuffle icons at 16x16

2006-04-07  Jakub Steiner <jimmac@ximian.com>

	* weather-clear: tweaks

2006-04-07  Jakub Steiner <jimmac@ximian.com>

	* image-loading: for when files are thumbnailed

2006-04-07  Rodney Dawes  <dobey@novell.com>

	* */stock/media/Makefile.am:
	* */stock/media/*.png: Removed some media icons that have been
	superceded by icon names in other contexts	

2006-04-07  Rodney Dawes  <dobey@novell.com>

	* */stock/text/Makefile.am:
	* */stock/text/stock_text*: Removed some text formatting icons that
	have been superceded by formatting icons in the actions context

2006-04-07  Jakub Steiner <jimmac@ximian.com>

	* */devices/video-display.*: contributed by Luca Ferretti
		(#337613). Some slight modifications
	
2006-04-06  Rodney Dawes  <dobey@novell.com>

	* */stock/generic/Makefile.am:
	* */stock/generic/stock_*.png: Removed a lot more icons which have
	been replaced or moved to other contexts to follow the Naming Spec

2006-04-06  Rodney Dawes  <dobey@novell.com>

	* 48x48/stock/generic/Makefile.am:
	* 48x48/stock/generic/stock_weather*: Remove the stock_weather icons
	from here, as they are replaced by the weather-* icons in status

2006-04-06  Rodney Dawes  <dobey@novell.com>
