@@ -1,80 +1,126 @@
 [Icon Theme]
 _Name=GNOME
 _Comment=Default GNOME Theme
-Directories=48x48/actions,48x48/animations,48x48/apps,48x48/categories,48x48/devices,48x48/emblems,48x48/filesystems,48x48/mimetypes,48x48/places,48x48/status,48x48/stock/code,48x48/stock/document,48x48/stock/generic,48x48/stock/io,48x48/stock/net,24x24/actions,24x24/animations,24x24/apps,24x24/categories,24x24/devices,24x24/emblems,24x24/filesystems,24x24/mimetypes,24x24/places,24x24/status,24x24/stock/chart,24x24/stock/code,24x24/stock/data,24x24/stock/document,24x24/stock/form,24x24/stock/generic,24x24/stock/image,24x24/stock/io,24x24/stock/media,24x24/stock/navigation,24x24/stock/net,24x24/stock/object,24x24/stock/table,24x24/stock/text,16x16/actions,16x16/animations,16x16/apps,16x16/categories,16x16/devices,16x16/filesystems,16x16/mimetypes,16x16/places,16x16/status,16x16/stock/chart,16x16/stock/code,16x16/stock/code,16x16/stock/data,16x16/stock/document,16x16/stock/emoticons,16x16/stock/form,16x16/stock/generic,16x16/stock/image,16x16/stock/io,16x16/stock/media,16x16/stock/navigation,16x16/stock/net,16x16/stock/object,16x16/stock/table,16x16/stock/text,scalable/apps,scalable/devices,scalable/emblems,scalable/mimetypes,scalable/places,scalable/status,scalable/stock/generic
 
-[48x48/actions]
-Size=48
+Directories=16x16/actions,16x16/animations,16x16/apps,16x16/categories,16x16/devices,16x16/filesystems,16x16/mimetypes,16x16/places,16x16/status,16x16/stock/chart,16x16/stock/code,16x16/stock/code,16x16/stock/data,16x16/stock/document,16x16/stock/emoticons,16x16/stock/form,16x16/stock/generic,16x16/stock/image,16x16/stock/io,16x16/stock/media,16x16/stock/navigation,16x16/stock/net,16x16/stock/object,16x16/stock/table,16x16/stock/text,24x24/actions,24x24/animations,24x24/apps,24x24/categories,24x24/devices,24x24/emblems,24x24/filesystems,24x24/mimetypes,24x24/places,24x24/status,24x24/stock/chart,24x24/stock/code,24x24/stock/data,24x24/stock/document,24x24/stock/form,24x24/stock/generic,24x24/stock/image,24x24/stock/io,24x24/stock/media,24x24/stock/navigation,24x24/stock/net,24x24/stock/object,24x24/stock/table,24x24/stock/text,48x48/actions,48x48/animations,48x48/apps,48x48/categories,48x48/devices,48x48/emblems,48x48/filesystems,48x48/mimetypes,48x48/places,48x48/status,48x48/stock/code,48x48/stock/document,48x48/stock/generic,48x48/stock/io,48x48/stock/net,scalable/apps,scalable/devices,scalable/emblems,scalable/mimetypes,scalable/places,scalable/status,scalable/stock/generic
+
+[16x16/actions]
+Size=16
 Context=Actions
 Type=Fixed
 
-[48x48/animations]
-Size=48
+[16x16/animations]
+Size=16
 Context=Animations
 Type=Fixed
 
-[48x48/apps]
-Size=48
+[16x16/apps]
+Size=16
 Context=Applications
 Type=Fixed
 
-[48x48/categories]
-Size=48
+[16x16/categories]
+Size=16
 Context=Categories
 Type=Fixed
 
-[48x48/devices]
-Size=48
+[16x16/devices]
+Size=16
 Context=Devices
 Type=Fixed
 
-[48x48/emblems]
-Size=48
-Context=Emblems
-Type=Fixed
-
-[48x48/filesystems]
-Size=48
+[16x16/filesystems]
+Size=16
 Context=FileSystems
 Type=Fixed
 
-[48x48/mimetypes]
-Size=48
+[16x16/mimetypes]
+Size=16
 Context=MimeTypes
 Type=Fixed
 
-[48x48/places]
-Size=48
+[16x16/places]
+Size=16
 Context=Places
 Type=Fixed
 
-[48x48/status]
-Size=48
+[16x16/status]
+Size=16
 Context=Status
 Type=Fixed
 
-[48x48/stock/code]
-Size=48
+[16x16/stock/chart]
+Size=16
 Context=Stock
 Type=Fixed
 
-[48x48/stock/document]
-Size=48
+[16x16/stock/code]
+Size=16
 Context=Stock
 Type=Fixed
 
-[48x48/stock/generic]
-Size=48
+[16x16/stock/data]
+Size=16
 Context=Stock
 Type=Fixed
 
-[48x48/stock/io]
-Size=48
+[16x16/stock/document]
+Size=16
 Context=Stock
 Type=Fixed
 
-[48x48/stock/net]
-Size=48
+[16x16/stock/emoticons]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/form]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/generic]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/image]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/io]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/media]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/navigation]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/net]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/object]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/table]
+Size=16
+Context=Stock
+Type=Fixed
+
+[16x16/stock/text]
+Size=16
 Context=Stock
 Type=Fixed
 
@@ -198,123 +244,78 @@ Size=24
 Context=Stock
 Type=Fixed
 
-[16x16/actions]
-Size=16
+[48x48/actions]
+Size=48
 Context=Actions
 Type=Fixed
 
-[16x16/animations]
-Size=16
+[48x48/animations]
+Size=48
 Context=Animations
 Type=Fixed
 
-[16x16/apps]
-Size=16
+[48x48/apps]
+Size=48
 Context=Applications
 Type=Fixed
 
-[16x16/categories]
-Size=16
+[48x48/categories]
+Size=48
 Context=Categories
 Type=Fixed
 
-[16x16/devices]
-Size=16
+[48x48/devices]
+Size=48
 Context=Devices
 Type=Fixed
 
-[16x16/filesystems]
-Size=16
+[48x48/emblems]
+Size=48
+Context=Emblems
+Type=Fixed
+
+[48x48/filesystems]
+Size=48
 Context=FileSystems
 Type=Fixed
 
-[16x16/mimetypes]
-Size=16
+[48x48/mimetypes]
+Size=48
 Context=MimeTypes
 Type=Fixed
 
-[16x16/places]
-Size=16
+[48x48/places]
+Size=48
 Context=Places
 Type=Fixed
 
-[16x16/status]
-Size=16
+[48x48/status]
+Size=48
 Context=Status
 Type=Fixed
 
-[16x16/stock/chart]
-Size=16
+[48x48/stock/code]
+Size=48
 Context=Stock
 Type=Fixed
 
-[16x16/stock/code]
-Size=16
+[48x48/stock/document]
+Size=48
 Context=Stock
 Type=Fixed
 
-[16x16/stock/data]
-Size=16
+[48x48/stock/generic]
+Size=48
 Context=Stock
 Type=Fixed
 
-[16x16/stock/document]
-Size=16
+[48x48/stock/io]
+Size=48
 Context=Stock
 Type=Fixed
 
-[16x16/stock/emoticons]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/form]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/generic]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/image]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/io]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/media]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/navigation]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/net]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/object]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/table]
-Size=16
-Context=Stock
-Type=Fixed
-
-[16x16/stock/text]
-Size=16
+[48x48/stock/net]
+Size=48
 Context=Stock
 Type=Fixed
 
@@ -366,4 +367,3 @@ MinSize=32
 MaxSize=256
 Context=Stock
 Type=Scalable
-
