@@ -1,5 +1,9 @@
 2006-04-07  Rodney Dawes  <dobey@novell.com>
 
+	* index.theme.in: Fix ordering of Directories to be smallest->largest
+
+2006-04-07  Rodney Dawes  <dobey@novell.com>
+
 	* 48x48/status/gnome-fs-loading.png: Remove icon which is replaced
 	by the image-loading icon in the status context
 
